# pico-rust-test_3-FP_SCANNER

./: Cargo.toml  README.md
src/: lib.rs  main.rs  r503.rs  set_address.rs  set_colour.rs  set_fingerprint.rs  set_password.rs  verify_fingerprint.rs  verify_password.rs
