[package]
name = "pico-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "r503"
path = "src/lib.rs"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

pio = "0.2.1"
pio-proc = "0.2"
smart-leds = "0.3.0"

heapless = "0.8.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
debug = 0
opt-level = 3

[[bin]]
name = "verify_password"
path = "src/verify_password.rs"

[[bin]]
name = "verify_fingerprint"
path = "src/verify_fingerprint.rs"

[[bin]]
name = "set_password"
path = "src/set_password.rs"

[[bin]]
name = "set_address"
path = "src/set_address.rs"

[[bin]]
name = "set_colour"
path = "src/set_colour.rs"

[[bin]]
name = "set_fingerprint"
path = "src/set_fingerprint.rs"
