[package]
name = "pico-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

pio = "0.2.1"
pio-proc = "0.2"
smart-leds = "0.3.0"

heapless = "0.8.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.ws2812]
git = "https://github.com/FransUrbo/rust-libs-ws2812.git"
rev = "712ed6e"

[dependencies.r503]
git = "https://github.com/FransUrbo/rust-libs-r503.git"
rev = "1bbbe8c"

# They haven't released the `embassy_time::with_deadline` yet, so need to use the GIT version.
[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-time-driver]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy.git"
rev = "511bee7"
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
debug = 0
opt-level = 3

[[bin]]
name = "verify_password"
path = "src/verify_password.rs"

[[bin]]
name = "verify_fingerprint"
path = "src/verify_fingerprint.rs"

[[bin]]
name = "set_password"
path = "src/set_password.rs"

[[bin]]
name = "set_address"
path = "src/set_address.rs"

[[bin]]
name = "set_colour"
path = "src/set_colour.rs"

[[bin]]
name = "set_fingerprint"
path = "src/set_fingerprint.rs"
